--- a/odeSafety.tex
+++ b/odeSafety.tex
@@ -24,7 +24,7 @@
 \begin{matlabcode}
 clear;
 clc; 
-syms u(t) a b phi
+syms u(t) a b phi e_i
 eqn = diff(u,t)== (-1/phi)*u+(1/phi)*(a*t+b)
 \end{matlabcode}
 \begin{matlabsymbolicoutput}
@@ -36,36 +36,31 @@ uSolved = dsolve(eqn)
 \end{matlabcode}
 \begin{matlabsymbolicoutput}
 uSolved = 
-    $\displaystyle b-a \varphi +a t+C_1  e^{-\frac{t}{\varphi }} $
+    $\displaystyle b-a \varphi +a t+C_5  e^{-\frac{t}{\varphi }} $
 \end{matlabsymbolicoutput}
 \begin{matlabcode}
+vSolved = int(uSolved,t)+e_i;
+pSolved = int(vSolved);
 syms C1 C2 mu_s(t)
-eqn2 = diff(mu_s,t) == -( (a/phi) - (C1/phi^2)*exp(-t/phi) + C2/phi)-mu_s/phi
+eqn2Modified = diff(mu_s,t) == (1/phi)*(mu_s + C2) + (1/phi^2)*(uSolved - (a*t+b));
 \end{matlabcode}
 \begin{matlabsymbolicoutput}
-eqn2(t) = 
-    $\displaystyle \frac{\partial }{\partial t}\;\mu_s \left(t\right)=\frac{C_1  e^{-\frac{t}{\varphi }} }{\varphi^2 }-\frac{C_2 }{\varphi }-\frac{a}{\varphi }-\frac{\mu_s \left(t\right)}{\varphi }$
+eqn2Modified(t) = 
+    $\displaystyle \frac{\partial }{\partial t}\;\mu_s \left(t\right)=\frac{C_2 +\mu_s \left(t\right)}{\varphi }-\frac{a \varphi -C_5  e^{-\frac{t}{\varphi }} }{\varphi^2 }$
 \end{matlabsymbolicoutput}
 \begin{matlabcode}
-eqn2prime = diff(mu_s,t) == (-C2 - mu_s - (1/phi)*(a*t+b-uSolved))/phi
-\end{matlabcode}
-\begin{matlabsymbolicoutput}
-eqn2prime(t) = 
-    $\displaystyle \frac{\partial }{\partial t}\;\mu_s \left(t\right)=-\frac{C_2 +\mu_s \left(t\right)+\frac{a \varphi -C_1  e^{-\frac{t}{\varphi }} }{\varphi }}{\varphi }$
-\end{matlabsymbolicoutput}
-\begin{matlabcode}
-muSolved = dsolve(eqn2)
+muSolved = dsolve(eqn2Modified);
 \end{matlabcode}
 \begin{matlabsymbolicoutput}
 muSolved = 
-    $\displaystyle C_5  e^{-\frac{t}{\varphi }} -e^{-\frac{t}{\varphi }}  {\left(e^{t/\varphi }  {\left(C_2 +a\right)}-\frac{C_1  t}{\varphi^2 }\right)}$
+    $\displaystyle C_6  e^{t/\varphi } -e^{t/\varphi }  {\left(e^{-\frac{t}{\varphi }}  {\left(C_2 -a\right)}+\frac{C_5  e^{-\frac{2 t}{\varphi }} }{2 \varphi }\right)}$
 \end{matlabsymbolicoutput}
 \begin{matlabcode}
 simplify(muSolved)
 \end{matlabcode}
 \begin{matlabsymbolicoutput}
 ans = 
-    $\displaystyle -\frac{C_2  \varphi^2 +a \varphi^2 -C_1  t e^{-\frac{t}{\varphi }} -C_5  \varphi^2  e^{-\frac{t}{\varphi }} }{\varphi^2 }$
+    $\displaystyle -\frac{2 C_2  \varphi -2 a \varphi +C_5  e^{-\frac{t}{\varphi }} -2 C_6  \varphi  e^{t/\varphi } }{2 \varphi }$
 \end{matlabsymbolicoutput}
 \begin{matlabcode}
 syms lambda_v(t)
@@ -74,21 +69,21 @@ eqn3 = diff(lambda_v,t) == -C2-muSolved
 \end{matlabcode}
 \begin{matlabsymbolicoutput}
 eqn3(t) = 
-    $\displaystyle \frac{\partial }{\partial t}\;\lambda_v \left(t\right)=e^{-\frac{t}{\varphi }}  {\left(e^{t/\varphi }  {\left(C_2 +a\right)}-\frac{C_1  t}{\varphi^2 }\right)}-C_2 -C_5  e^{-\frac{t}{\varphi }} $
+    $\displaystyle \frac{\partial }{\partial t}\;\lambda_v \left(t\right)=e^{t/\varphi }  {\left(e^{-\frac{t}{\varphi }}  {\left(C_2 -a\right)}+\frac{C_5  e^{-\frac{2 t}{\varphi }} }{2 \varphi }\right)}-C_2 -C_6  e^{t/\varphi } $
 \end{matlabsymbolicoutput}
 \begin{matlabcode}
 lambdaSolved = dsolve(eqn3)
 \end{matlabcode}
 \begin{matlabsymbolicoutput}
 lambdaSolved = 
-    $\displaystyle C_6 +e^{-\frac{t}{\varphi }}  {\left(C_1 +C_5  \varphi \right)}+a t+\frac{C_1  t e^{-\frac{t}{\varphi }} }{\varphi }$
+    $\displaystyle C_7 -a t-\frac{C_5  e^{-\frac{t}{\varphi }} }{2}-C_6  \varphi  e^{t/\varphi } $
 \end{matlabsymbolicoutput}
 \begin{matlabcode}
 simplify(lambdaSolved)
 \end{matlabcode}
 \begin{matlabsymbolicoutput}
 ans = 
-    $\displaystyle C_6 +e^{-\frac{t}{\varphi }}  {\left(C_1 +C_5  \varphi \right)}+a t+\frac{C_1  t e^{-\frac{t}{\varphi }} }{\varphi }$
+    $\displaystyle C_7 -a t-\frac{C_5  e^{-\frac{t}{\varphi }} }{2}-C_6  \varphi  e^{t/\varphi } $
 \end{matlabsymbolicoutput}
 \begin{matlabcode}
 
@@ -96,7 +91,7 @@ simplify(lambdaSolved-muSolved*phi-uSolved)
 \end{matlabcode}
 \begin{matlabsymbolicoutput}
 ans = 
-    $\displaystyle C_6 -b+C_2  \varphi +2 a \varphi $
+    $\displaystyle C_7 -b+C_2  \varphi -2 a t-C_5  e^{-\frac{t}{\varphi }} -2 C_6  \varphi  e^{t/\varphi } $
 \end{matlabsymbolicoutput}
 
 \end{document}
